--- a/css/products-styles.css
+++ b/css/products-styles.css
@@ -93,7 +93,7 @@ body {
 .produtos {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  
 }
 
 .produto-card {
@@ -102,7 +102,7 @@ body {
   border-radius: 4%;
 
   width: 75%;
-  margin: 1rem;
+  margin: 1rem auto;
   padding: 0.5rem;
 }
 
@@ -138,7 +138,10 @@ body {
 
 footer {
   background: url(../img/bg2.jpg);
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ 
 }
 
 .image-logo {
@@ -156,6 +159,7 @@ footer {
   .navbar-header {
     flex-direction: row;
     justify-content: space-around;
+    margin-bottom: 2.5rem;
   }
 
   .navbar-list {
@@ -165,10 +169,32 @@ footer {
 
   .produtos-container {
     display: flex;
+    margin: 1rem;
   }
 
   .produto-card {
     width: 50%;
+    margin: 0.5rem;
   }
+
+  footer {
+    margin-top: 5rem;
+  }
+}
+
+@media  screen and (min-width: 1024px) {
+  
+  .produto-card:hover {
+    border-color: var(--laranja-pastel);
+  }
+  
+  .produto-card:active {
+    border-color: var(--verde-claro);
+  }
+
+  .produto-card:hover .title-products {
+    font-size: 2em;
+  }
+  
 
 }
